public static class PlayerAnimationConstants
{
    public const string JumpMultiplier = "JumpMultiplier";
    public const string IsJumping = "IsJumping";
    public const string StartGameTrigger = "StartGameTrigger";
    public const string DieTrigger = "Die";
    public const string IsRolling = "IsRolling";
    public const string RollSpeedMultiplier = "RollMultiplier";

    public const string StartGameAnimationStateName = "StartRun";
}
